Fixed margins on mobile

--- a/app/note/note.module.css
+++ b/app/note/note.module.css
@@ -1,4 +1,6 @@
 .note {
     font-family: --font-montserrat, sans-serif;
     max-width: 50em;
+    margin-left: 2em;
+    margin-right: 2em;
 }
